Fixed body overflow

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,7 +11,6 @@ html, input, textarea, select {
 
 body {
     margin: 0;
-    overflow: hidden;
     background-color: #fffef2;
 }
 
@@ -63,16 +62,17 @@ body {
     position: absolute;
     width: 100%;
     z-index: -1;
+    top: 0;
 }
 
     .background.gradient {
         background: linear-gradient(180deg, rgba(255, 254, 242, 0) calc(100vw/16*9/100*60), rgba(255, 254, 242, 1) calc(100vw/16*9/100*80));
-        height: 100%
+        height: 100%;
     }
 
 /*--------Content--------*/
 .content {
-    margin: 0 15%;
+    margin: 0 15% 50px;
     color: #39876F;
     text-shadow: 1px 2px 2px rgb(0 0 0 / 25%);
 }
